# IdeaDiscussionMaster

./: .dockerignore  .env.example  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile2  LICENSE  README.md  debug.sh  renovate.json
.github/workflows/: actions.yml  audit.yml  build-binary.yml  build-docker.yml  build_and_deploy.yml  ci-and-cd.yml  docker-build.yml  docker.yml  dockerlint.yml  hadolint.yml  lint-actions.yml  lint-dockerfile.yml  lint_actions.yml  release_docker.yml  renovate.yml  validate-renovate.yml
attachments/: compose.yaml  docker-compose.yml  release.sh  restart-docker.sh  restart_docker.sh  run-idea.service  run.sh
c-domain/: Cargo.toml
c-domain/src/: agenda.rs  id.rs  lib.rs  record.rs  repository.rs  status.rs
c-domain/src/github/: repository.rs
c-domain/src/redmine/: model.rs  repository.rs
c-domain/src/redmine/model/: agenda.rs  note.rs  record.rs  status.rs
c-domain/src/redmine/model/status/: agenda.rs  record.rs
c-domain/src/status/: agenda.rs
c-infra/: Cargo.toml
c-infra/src/: client.rs  github.rs  lib.rs  model.rs  repository.rs  use_status_id.rs
c-infra/src/client/: redmine.rs  redmine_url_interpreter.rs
c-infra/src/github/: client.rs  repository.rs
c-infra/src/model/: create_redmine_record.rs  redmine.rs
c-infra/src/model/redmine/: create_note.rs  create_record.rs  issue.rs  update_agenda.rs  update_record.rs
c-infra/src/redmine/: client.rs  model.rs  repository.rs  serde_opt_naive_date.rs  use_status_id.rs
c-infra/src/redmine/client/: redmine.rs
c-infra/src/redmine/model/: create_record.rs  issue.rs  update_agenda.rs  update_record.rs
c-infra/src/redmine/repository/: agenda.rs  record.rs
c-infra/src/repository/: agenda.rs  record.rs
c-presentation/: Cargo.toml
c-presentation/src/: commands.rs  lib.rs  main.rs  shared.rs
c-presentation/src/commands/: agenda.rs  create.rs  end.rs  ping.rs  register.rs  start.rs  vote.rs
c-presentation/src/commands/agenda/: add.rs
c-presentation/src/commands/create/: issue.rs  shared.rs  thread.rs
c-presentation/src/commands/vote/: end.rs  shared.rs  start.rs
c-presentation/src/shared/: command_error.rs  data.rs  discord_embed.rs  ext.rs  global.rs  hashset_ext.rs  vote_choice.rs
c-presentation/src/shared/ext/: create_discord_embed_ext.rs  cut_string.rs  discord_embed_ext.rs  sort_agendas.rs  use_formatted_id.rs  use_formatted_user_name.rs  use_status_emoji.rs  use_status_ja.rs
c-presentation/src/shared/global/: current_agenda_id.rs  global_agendas.rs  model.rs  record_id.rs  vc_id.rs  vote_message_id.rs
c-presentation/src/shared/global/model/: global_agenda.rs  global_agendas.rs
c-usecase/: Cargo.toml
c-usecase/src/: agenda.rs  github.rs  lib.rs  model.rs  record.rs  redmine.rs
c-usecase/src/github/: issue.rs  model.rs
c-usecase/src/model/: agenda_dto.rs  create_note_param.rs  create_record_param.rs  record_dto.rs  record_param.rs
c-usecase/src/redmine/: record.rs
c-usecase/src/redmine/model/: agenda_dto.rs  create_note_param.rs  create_record_param.rs  record_dto.rs
c-usecase/tests/: agenda.rs  record.rs
c-usecase/tests/agenda_fixture/: mod.rs
c-usecase/tests/record_fixture/: mod.rs
crate-domain/: Cargo.toml
crate-domain/src/: agenda.rs  error.rs  lib.rs  repository.rs  status.rs
crate-domain/src/id/: issue_id.rs  vc_chat_ch_id.rs
crate-domain/src/redmine/: agenda.rs  note.rs  record.rs
crate-domain/src/repository/: agenda.rs  gh_issue.rs  record.rs
crate-domain/src/status/: agenda.rs  record.rs
crate-infrastructure/: Cargo.toml
crate-infrastructure/src/: lib.rs  model.rs  module.rs  persistence.rs  serde_opt_naive_date.rs
crate-infrastructure/src/model/: create_redmine_record.rs  redmine.rs
crate-infrastructure/src/persistence/: github.rs  redmine.rs
crate-infrastructure/src/repository/: agenda.rs  gh_issue.rs  record.rs
crate-presentation/: Cargo.toml
crate-presentation/src/: command.rs  global.rs  handler.rs  lib.rs  main.rs  module.rs  shared.rs  utils.rs
crate-presentation/src/command/: agenda.rs  create.rs  end.rs  start.rs  vote.rs
crate-presentation/src/command/create/: issue.rs  new_record.rs  thread.rs
crate-presentation/src/global/: agendas.rs  model.rs  module.rs  record_id.rs  voice_chat_channel_id.rs
crate-presentation/src/shared/: command.rs  command_ext.rs  discord_embeds.rs  ext.rs  issue_id_array_parser.rs
crate-presentation/src/shared/builder/: slash_command_option.rs
crate-presentation/src/shared/command/: interaction_response.rs
crate-presentation/src/shared/ext/: command_ext.rs  create_embed_ext.rs
crate-presentation/src/utils/: discord_embeds.rs
crate-shared/: Cargo.toml
crate-shared/src/: chrono_ext.rs  command.rs  create_embed_ext.rs  discord_embed.rs  discussion.rs  env.rs  ext.rs  id_ext.rs  lib.rs  secret_key.rs
crate-shared/src/command/: README.md  application_interaction.rs  builder.rs  command_ext.rs  interaction_response.rs
crate-shared/src/command/builder/: ext.rs
crate-shared/src/ext/: create_embed_ext.rs  hashset_ext.rs  id_ext.rs
crate-usecase/: Cargo.toml
crate-usecase/src/: agenda.rs  gh_issue.rs  lib.rs  model.rs  record.rs
crate-usecase/src/model/: agenda.rs  agenda_dto.rs  record.rs  record_dto.rs  record_param.rs
crate-utils/: Cargo.toml
crate-utils/src/: command.rs  discord_embed.rs  discussion.rs  lib.rs
crate-utils/src/command/: application_interaction.rs  builder.rs  command_ext.rs
crate-utils/src/command/builder/: slash_command.rs  slash_command_option.rs
domain/: Cargo.toml
domain/src/: lib.rs
infrastructure/: Cargo.toml
infrastructure/src/persistence/: github.rs
presentation/: Cargo.toml
presentation/src/: command.rs
presentation/src/command/: create.rs  end.rs  start.rs
src/: application_interactions.rs  command.rs  commands.rs  domain.rs  domains.rs  global.rs  globals.rs  infrastructure.rs  lib.rs  listeners.rs  main.rs  presentation.rs  slash_command.rs  usecase.rs  util.rs  utils.rs
src/command/: agenda.rs  create.rs  end.rs  start.rs  vote.rs
usecase/: Cargo.toml
utils/: Cargo.toml
(+129 files in other folders)
