[workspace]
members = [
  "crate-shared",
  "c-domain",
  "c-usecase",
  "c-infra",
  "c-presentation"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
derive-new = "0.6"
futures = "0.3.30"
itertools = "0.12"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
test-case = "3.3"
tokio = { version = "1.37", features = ["macros", "rt", "rt-multi-thread"] }
