[workspace]
members = [
  "crate-shared",
  "c-domain",
  "c-usecase",
  "c-infra",
  "c-presentation"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
derive-new = "0.6"
futures = "0.3.30"
itertools = "0.12.1"
regex = "1.10"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
strum = { version = "0.24.1", features = ["derive"] }
test-case = "3.3"
tokio = { version = "1.37", features = ["macros", "rt", "rt-multi-thread"] }
