[package]
name = "c-domain"
version.workspace = true
edition.workspace = true

[features]
mock = ["mockall"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
derive-new.workspace = true
serde.workspace = true

async-trait = "0.1"
strum = { version = "0.24", features = ["derive"] }
mockall = {version = "0.11", optional = true}

[dev-dependencies]
test-case = "3.2"
