[package]
name = "c-domain"
version.workspace = true
edition.workspace = true

[features]
mock = ["mockall"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
derive-new.workspace = true
serde.workspace = true
strum.workspace = true

async-trait = "0.1"
mockall = {version = "0.12", optional = true}

[dev-dependencies]
test-case = "3.3"
