[package]
name = "c-infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c-domain = { path = "../c-domain" }
crate-shared = { path = "../crate-shared" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
async-trait = "0.1"
anyhow = "1.0"
derive-new = "0.5"
itertools = "0.10"
surf = "2.3"
strum = "0.24"

[dev-dependencies]
test-case = "2.2"
tokio = { version = "1.20", features = ["rt", "macros"] }
