[package]
name = "c-infra"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c-domain = { path = "../c-domain" }
crate-shared = { path = "../crate-shared" }

anyhow.workspace = true
chrono.workspace = true
derive-new.workspace = true
itertools.workspace = true
strum.workspace = true

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
surf = "2.3"
create-github-app-token = "2.0.0"

[dev-dependencies]
test-case.workspace = true
tokio.workspace = true
