[package]
name = "c-presentation"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c-domain = { path = "../c-domain" }
c-usecase = { path = "../c-usecase" }
c-infra = { path = "../c-infra" }
crate-shared = { path = "../crate-shared" }

anyhow.workspace = true
chrono.workspace = true
derive-new.workspace = true
futures.workspace = true
itertools.workspace = true
regex.workspace = true
strum.workspace = true
tokio.workspace = true

once_cell = "1.15"
fern = "0.6"
log = "0.4"
poise = "0.3"
argh = "0.1"
thiserror = "1.0"
