[package]
name = "c-presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c-domain = { path = "../c-domain" }
c-usecase = { path = "../c-usecase" }
c-infra = { path = "../c-infra" }
crate-shared = { path = "../crate-shared" }

once_cell = "1.15"
anyhow = "1.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
itertools = "0.10"
chrono = "0.4"
fern = "0.6"
log = "0.4"
poise = "0.3"
derive-new = "0.5"
regex = "1.6"
strum = { version = "0.24", features = ["derive"] }
argh = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
