[package]
name = "c-presentation"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c-domain = { path = "../c-domain" }
c-usecase = { path = "../c-usecase" }
c-infra = { path = "../c-infra" }
crate-shared = { path = "../crate-shared" }

anyhow.workspace = true
chrono.workspace = true
derive-new.workspace = true
futures.workspace = true
itertools.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio.workspace = true

once_cell = "1.18"
fern = "0.6"
log = "0.4"
poise = "0.5"
argh = "0.1"
thiserror = "1.0"
sentry = "0.31.5"
