[package]
name = "c-usecase"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c-domain = { path = "../c-domain" }
crate-shared = { path = "../crate-shared" }

anyhow.workspace = true
chrono.workspace = true
derive-new.workspace = true
futures.workspace = true
regex.workspace = true

[dev-dependencies]
c-domain = { path = "../c-domain", features = ["mock"] }

itertools.workspace = true
test-case.workspace = true
tokio.workspace = true
