[package]
name = "crate-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive-new = "0.5"
thiserror = "1.0"
strum = { version = "0.24", features = ["derive"] }
itertools = "0.10"
chrono = "0.4"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
