[package]
name = "crate-infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-domain = { path = "../crate-domain" }
crate-utils = { path = "../crate-utils" }

derive-new = "0.5"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
create-github-app-token = "2.0"
anyhow = "1.0"
serde_json = "1.0"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
