[package]
name = "crate-presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-domain = { path = "../crate-domain" }
crate-usecase = { path = "../crate-usecase" }
crate-infrastructure = { path = "../crate-infrastructure" }
crate-utils = { path = "../crate-utils" }

once_cell = "1.10"
anyhow = "1.0"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
itertools = "0.10"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
