[package]
name = "crate-presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-domain = { path = "../crate-domain" }
crate-usecase = { path = "../crate-usecase" }
crate-infrastructure = { path = "../crate-infrastructure" }
crate-shared = { path = "../crate-shared" }

once_cell = "1.12"
anyhow = "1.0"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
itertools = "0.10"
regex = "1.5"
chrono = "0.4"
strum = { version = "0.24", features = ["derive"] }
fern = "0.6"
log = "0.4"
argh = "0.1"

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model"]
