[package]
name = "crate-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-domain = { path = "../crate-domain" }

anyhow = "1.0"
chrono = "0.4"
itertools = "0.10"

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
