[package]
name = "crate-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model"]
