[package]
name = "crate-usecase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-domain = { path = "../crate-domain" }
# TODO: see infra from usecase???
crate-infrastructure = { path = "../crate-infrastructure" }

anyhow = "1.0"
derive-new = "0.5"
