[package]
name = "crate-usecase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate-domain = { path = "../crate-domain" }

anyhow = "1.0"
derive-new = "0.5"
chrono = "0.4"
crate-shared = { version = "0.1.0", path = "../crate-shared" }
regex = "1.5"
