[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
usecase = { path = "../usecase" }
infrastructure = { path = "../infrastructure" }
utils = { path = "../utils" }

once_cell = "1.10"
anyhow = "1.0"
tokio = { version = "1.17", features = ["full"] }

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
